--- a/sections/existing.tex
+++ b/sections/existing.tex
@@ -48,43 +48,13 @@ Both of these cycles continuously run in parallel to each other.
     \item Reflective Adaptation Control: 
 \end{itemize}
 
-\subparagraph*{FIoT}
-by 
+\subparagraph*{Learning Revised Models for Planning in Adaptive Systems}
+by Sykes et al., 2013 \cite*{LearningRevisedModels}
 \begin{itemize}
-    \item Location:
-    \item Time:
+    \item Location: 
+    \item Time: run time
     \item Technique:
-    \item Purpose:
-    \item Approach:
-    \item Reflective Adaptation Control:
-\end{itemize}
-
-\subparagraph*{FUSION}
-\begin{itemize}
-    \item Location:
-    \item Time:
-    \item Technique:
-    \item Purpose:
-    \item Approach:
-    \item Reflective Adaptation Control:
-\end{itemize}
-
-\subparagraph*{FUSION}
-\begin{itemize}
-    \item Location:
-    \item Time:
-    \item Technique:
-    \item Purpose:
-    \item Approach:
-    \item Reflective Adaptation Control:
-\end{itemize}
-
-\subparagraph*{FUSION}
-\begin{itemize}
-    \item Location:
-    \item Time:
-    \item Technique:
-    \item Purpose:
-    \item Approach:
-    \item Reflective Adaptation Control:
+    \item Purpose: improve domain model + generate new rules
+    \item Approach: internal component that sits between the domain model and the SAS
+    \item Reflective Adaptation Control: 
 \end{itemize}
